KOGITO-6731: persistence-commons: Reporting: Handle service restarts (#1239)
Co-authored-by: Michael Anstis <manstis@redhat.com>